--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Pokedex</title>
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
-    <link rel="stylesheet" href="pokepelotasanimacion.css">
+    <link rel="stylesheet" href="static/css/pokepelotasanimacion.css">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="static/css/css.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -26,17 +26,21 @@
 
 ">
 
+    <header class="d-flex justify-content-center d-none" id="logo">
+        <img src="static/img/logo.png" alt="logo">
+    </header>
+
     <form class="form-inline my-2 my-lg-0 d-flex justify-content-center flex-row-reverse d-none" id="barrabusqueda">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        <input class="form-control mr-sm-2" type="search" placeholder="Buscar Pokemón" aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit" id="buscar">Buscar</button>
     </form>
-    
+
     <div class="poke_box d-none" id="pokepelota">
         <div class="pokeball">
             <div class="pokeball__button"></div>
-        </div>   
+        </div>
     </div>
-    
+
 
 
     <div class="mygrid gap-3 mt-5 mb-5 d-none" id="mygrid">
@@ -44,12 +48,31 @@
 
     </div>
 
+    <div class="d-flex justify-content-around mb-5 mt-5">
+
+        <div>
+            <a href="">
+                <img src="static/img/first.png" alt="first" class="direccion d-none" id="first">
+            </a>
+        </div>
+
+        <div>
+            <a href="">
+            <img src="static/img/arrow.png" alt="anterior" class="direccion d-none" id="anterior">
+            </a>
+        </div>
+
+        <div>
+            <a href="">
+            <img src="static/img/arrow.png" alt="siguiente" class="direccion d-none" id="siguiente"> 
+            </a>
+        </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
     <script src="static/js.js"></script>
-
 </body>
 
 </html>
