--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                         ">
         <div class="popup d-none" id="popup">
             <h2 id="pokemon-name" class="text-center d-flex align-items-center justify-content-center"></h2>
-            <a class="close" href="javascript:void(0)" id="close">&times;</a>
+            <a class="close" id="close" href="javascript:void(0)" id="close">&times;</a>
             <div class="content d-flex justify-content-center">
                 <img src="" alt="foto del pokemon" id="pokemon-img">
             </div>
@@ -100,7 +100,7 @@
 
         <div>
             <a href="">
-                <img src="static/img/arrow.png" alt="siguiente" class="direccion d-none" id="siguiente">
+                <img src="static/img/arrow.png" alt="siguiente" class="direccion" id="siguiente">
             </a>
         </div>
     </div>
@@ -108,7 +108,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-    <script src="static/index.js" type="module"></script>
+    <script src="index.js" type="module"></script>
     <script src="static/src/onclick.js" type="module"></script>
 </body>
 
