--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokedex</title>
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="static/css/pokepelotasanimacion.css">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="static/css/css.css">
@@ -32,7 +30,7 @@
     </header>
 
     <div class="d-flex justify-content-center">
-        <form class="form-inline my-2 my-lg-0 d-flex justify-content-center flex-row-reverse d-none gap-1" id="barrabusqueda"
+        <form class="form-inline my-2 my-lg-0 d-flex justify-content-center flex-row-reverse d-none gap-1" id="barra-de-busqueda"
             style="max-width: 50%;">
             <input name="pokemon" class="form-control mr-sm-2" type="search" placeholder="Buscar Pokemón" aria-label="Search">
             <button name="buscar" class="btn btn-outline-success my-2 my-sm-0" type="submit" id="buscar">Buscar</button>
@@ -47,7 +45,7 @@
 
     <!-- PopUp -->
 
-    <div id="popup2" class="overlay" style="
+    <div id="fondo-negro" class="overlay" style="
 
     position: fixed;
     top: 0;
@@ -79,7 +77,7 @@
 
 
 
-    <div class="mygrid gap-3 mt-5 mb-5 d-none" id="mygrid">
+    <div class="mygrid gap-3 mt-5 mb-5 d-none" id="grid">
 
 
     </div>
@@ -88,7 +86,7 @@
 
         <div>
             <a href="">
-                <img src="static/img/first.png" alt="first" class="direccion d-none" id="first">
+                <img src="static/img/first.png" alt="first" class="direccion d-none" id="primera-pagina">
             </a>
         </div>
 
@@ -108,7 +106,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-    <script src="/static/index.js" type="module"></script>
+    <script src="/static/src/index.js" type="module"></script>
     <script src="static/src/onclick.js" type="module"></script>
 </body>
 
